# GPU-Quant-Finance

./: README.md  pyproject.toml  sp_500_deltas.jsonl  sp_500_historical_changes_only.csv
01-spec-clust/: Spectral_Clustering_From_Scratch.ipynb  Spectral_Clustering_Options_Demo.ipynb  Spectral_Clustering_Options_Demo_with_Benchmarking.ipynb  options_2026_04_16.parquet
02-lw-turnover/: LedoitWolf_Turnover_Demo.ipynb
03-kde-stylized-facts/: KDE_Stylized_Facts_Demo.ipynb
data/: IVV_holdings_2006_12_29.csv  IVV_holdings_2007_12_31.csv  IVV_holdings_2008_12_31.csv  IVV_holdings_2009_12_31.csv  IVV_holdings_2010_12_31.csv  IVV_holdings_2011_12_30.csv  IVV_holdings_2012_12_31.csv  IVV_holdings_2013_12_31.csv  IVV_holdings_2014_12_31.csv  IVV_holdings_2015_12_31.csv  IVV_holdings_2016_12_30.csv  IVV_holdings_2017_12_29.csv  IVV_holdings_2018_12_31.csv  IVV_holdings_2019_12_31.csv  IVV_holdings_2020_12.csv  IVV_holdings_2021_12_31.csv  IVV_holdings_2022_12_30.csv  IVV_holdings_2023_12_29.csv  IVV_holdings_2024_12_31.csv  IVV_holdings_2025_12_31.csv  IVV_holdings_2026_01_02.csv  IVV_holdings_2026_01_15.csv  IVV_holdings_2026_01_16.csv  Investments_2000-09-30.csv  Investments_2001-09-30.csv  Investments_2002-09-30.csv  Investments_2003-09-30.csv  Investments_2004-09-30.csv  Investments_2005-09-30.csv  Investments_2006-09-30.csv  Investments_2007-09-30.csv  Investments_2008-09-30.csv  Investments_2009-09-30.csv  Investments_2010-09-30.csv  Investments_2011-09-30.csv  Investments_2012-09-30.csv  Investments_2013-09-30.csv  Investments_2014-09-30.csv  Investments_2015-09-30.csv  (+13 more)
