[project]
name = "gpu-quant-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cudf-cu13>=26.6.0",
    "cudf-polars-cu13>=26.6.0",
    "cugraph-cu13>=26.6.0",
    "cuml-cu13>=26.6.0",
    "hdbscan>=0.8.44",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "jupyterlab-nvdashboard>=0.13.0",
    "matplotlib>=3.10.9",
    "plotly>=6.8.0",
    "polars>=1.38.1",
    "shap>=0.49.1",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "yfinance>=1.4.1",
]
